    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * Only offer delete action when Shift key is pressed in Collection context menu.
    * Only offer move action when Shift key is pressed in Collection context menu.
    * Remove context view video applet. Unmaintained and broken. (BR 242793)
    * Album cover images are written in background to prevent freezes. (BR 298332)
    * Make keyboard & mouse behaviour of saved playlists browser same as of the
      collection browser, including the delete key.
    * Delete and Shift + Delete keys now work as expected in collection browser.
    * Preserve statistics when copying or moving tracks to Local Collection.
    * Common album actions such as Show cover, Show under Various Artists are now
      available for all collections that support it, not just Local collection.
    * When copying files to iPod, ensure target directories exist.
    * When writing covers to files, all existing covers will be replaced.
    * PulseAudio status in diagnostic dialog.
    * optional libgpod dependency raised to 0.8.2 to support newest iPods.
    * Amarok now prevents accidental unmounting of iPods in (small) time-frames
      when iTunes database on iPod is not yet updated.
    * Amarok detects when iPod is to be ejected from system and gracefully
      disconnects it when it occurs.
    * Hitting the eject button on iPod collection ejects it also from the system.
    * iPod collection now detects whether iPod is safe to write and marks iPod
      as read-only if not. This prevents "iPod shows 0 tracks" problem.
    * Correct progress bar advancement when transferring tracks to iPod. (BR 139454)